[package]
name = "h1_asserts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
reqwest = { version = "0.11.23", features = ["serde_json","json"] }
serde_json = { version = "1.0.111", features = [] }
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "macros"] }
structopt = { version = "0.3", default-features = false }
xlsxwriter = "0.6"
regex = "1.11.1"